# yew-chatws

./: Cargo.toml  index.html  readme.md
assets/: styles.css
src/: lib.rs  main.rs
src/components/: container.rs  footer.rs  header.rs
src/services/: mod.rs  ws_service.rs
