[package]
name = "chat-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo = "0.6.1"
wasm-bindgen = "0.2.79"
web-sys = { version = "0.3.56", features = ["HtmlInputElement"] }

# yew-websocket = "1.0.1"
reqwasm = "0.4.0"
futures = "0.3.17"
wasm-bindgen-futures = "0.4.28"
